<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.VerifyActivity">

    <ImageView
        android:id="@+id/image_wave_top"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="top"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_wave_down"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:hint="@string/hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@color/purple_700"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:itemSpacing="10dp"
        app:itemWidth="48dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_wave_top"
        app:layout_constraintBottom_toTopOf="@id/button_verify"
        app:lineColor="@color/purple_500"
        app:lineWidth="2dp"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/button_verify"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/verify"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@drawable/edit_background"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstPinView"
        app:layout_constraintBottom_toTopOf="@id/image_wave_down"/>


    <ImageView
        android:id="@+id/image_wave_down"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:gravity="top"
        android:src="@drawable/ic_wave_top"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>