<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CreateProfileActivity">

    <ImageView
        android:id="@+id/image_wave_top"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="top"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_wave_down"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_user_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="60dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_wave_top">

        <ImageView
            android:id="@+id/image_user_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/button_background"/>

    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_photo_camera"
        android:elevation="10dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/card_user_image"
        app:layout_constraintEnd_toEndOf="@id/card_user_image"/>

    <EditText
        android:id="@+id/eFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:minHeight="48dp"
        android:drawableStart="@drawable/ic_person"
        android:drawableTint="@color/white"
        android:drawablePadding="12dp"
        android:layout_marginTop="20dp"
        android:hint="@string/full_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:autofillHints="none"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/edit_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_user_image"
        app:layout_constraintBottom_toTopOf="@id/eUsername"/>

    <EditText
        android:id="@+id/eUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_round_person"
        android:drawableTint="@color/white"
        android:drawablePadding="12dp"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:includeFontPadding="false"
        android:inputType="text"
        android:autofillHints="none"
        android:background="@drawable/edit_background"
        app:layout_constraintStart_toStartOf="@id/eFullName"
        app:layout_constraintEnd_toEndOf="@id/eFullName"
        app:layout_constraintTop_toBottomOf="@id/eFullName"
        app:layout_constraintBottom_toTopOf="@id/eEmailAddress"/>

    <EditText
        android:id="@+id/eEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_email"
        android:drawableTint="@color/white"
        android:drawablePadding="12dp"
        android:hint="@string/email_address"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:autofillHints="none"
        android:background="@drawable/edit_background"
        app:layout_constraintStart_toStartOf="@id/eFullName"
        app:layout_constraintEnd_toEndOf="@id/eFullName"
        app:layout_constraintTop_toBottomOf="@id/eUsername"
        app:layout_constraintBottom_toTopOf="@id/button_save"/>

    <TextView
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:background="@drawable/background_stroke"
        app:layout_constraintStart_toStartOf="@id/eFullName"
        app:layout_constraintEnd_toEndOf="@id/eFullName"
        app:layout_constraintTop_toBottomOf="@id/eEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/image_wave_down" />

    <ImageView
        android:id="@+id/image_wave_down"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:gravity="top"
        android:src="@drawable/ic_wave_top"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>