<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/image_wave_top"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="top"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_wave_down"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/ubuntu_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toBottomOf="@id/image_wave_top" />

    <View
        android:id="@+id/view_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/edit_background"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toTopOf="@id/button_login"/>

    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:ccp_hideNameCode="true"
        app:ccp_showFullName="false"
        app:ccp_defaultCode="91"
        app:ccp_showFlag="false"
        android:gravity="center"
        android:layout_marginStart="10dp"
        app:ccp_textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/view_phoneNumber"
        app:layout_constraintEnd_toStartOf="@id/ePhoneNumber"
        app:layout_constraintTop_toTopOf="@id/view_phoneNumber"
        app:layout_constraintBottom_toBottomOf="@id/view_phoneNumber"/>

    <EditText
        android:id="@+id/ePhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autofillHints="none"
        android:background="@android:color/transparent"
        android:fontFamily="@font/ubuntu_light"
        android:hint="@string/phone_number"
        android:includeFontPadding="false"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/view_phoneNumber"
        app:layout_constraintEnd_toEndOf="@id/view_phoneNumber"
        app:layout_constraintStart_toEndOf="@id/ccp"
        app:layout_constraintTop_toTopOf="@id/view_phoneNumber"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/button_login"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="10dp"
        android:src="@drawable/ic_round_arrow_go"
        app:tint="@color/white"
        android:contentDescription="@string/app_name"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintEnd_toEndOf="@id/text"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/view_phoneNumber"
        app:layout_constraintBottom_toTopOf="@id/image_wave_down"/>

    <ImageView
        android:id="@+id/image_wave_down"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:gravity="top"
        android:src="@drawable/ic_wave_top"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>